# poetry-tox-template

./: .gitignore  README.md  pyproject.toml  tox.ini
app/: main.py
